Itens: #11 – Alteração da entidade Estudante, adicionando os campos: matricula (com validação para não nulo e mensagem: Matrícula é obrigatória) curso #12 – Alteraração da interface que lista os estudantes para mostrar os novos campos, #13 – Alteraração da interface que cadastra/atualiza os estudantes para suportar os novos campos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 #Servidor Web
 server.port=8081
+
+#BD
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
+#spring.datasource.data=classpath:import.sql
